--- a/index.html
+++ b/index.html
@@ -4,56 +4,64 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Document</title>
   </head>
   <body>
     <!--Шапка сайту-->
-    <header>
-      <nav>
-        <a href="/index.html"> WebStudio </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href=""> Портфолио</a></li>
-          <li><a href=""> Контакты</a></li>
+    <div class="wraper">
+    <header  class="header">
+      <nav class="navigation">
+      <ul class=" list navigation-link"> 
+          <li class="logo"><a href="" > <span class="logo-s">Web</span>Studio </a></li>
+          <li class=" navigation-item"><a href="./index.html"  class="base-header">Студия</a></li>
+          <li class=" navigation-item"><a href="./portfolio.html"  class="base-header"> Портфолио</a></li>
+          <li class=" navigation-item"><a href=""  class="base-header" >Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
+      <ul class="list navigation-link" >
+        <li  class=" navigation-item" class="base-headers"><a href="">info@devstudio.com</a></li>
+        <li  class=" navigation-item" class="base-headers"><a href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    </div>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-h">Эффективные решения для вашего бизнеса </h1>
+        <button class="hero-btn">Заказать услугу</button>
       </section>
-      <section>
-        <h2>Навички</h2>
-        <ul>
+      <section class="section-1">
+        <h2 class="visually-hidden">Навички</h2>
+        <ul  class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="h3">Внимание к деталям</h3>
+            <p class="p">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="h3">Пунктуальность</h3>
+            <p class="p">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="h3">Планирование</h3>
+            <p class="p">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="h3">Современные технологии</h3>
+            <p class="p">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -61,24 +69,25 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
+        
+        <h2 class="h2">Чем мы занимаемся</h2>
+        <ul  class="list">
+          <li  >
+            <img  class="items"
               src="./images/box1.jpg"
               alt="Кодирование на компьютере и на планшете "
               width="370"
             />
-          </li>
+          </li class="items">
           <li>
-            <img
+            <img  
               src="./images/box2.jpg"
               alt="Подбор дизайна сайта на ноутбуке для телефона"
               width="370"
             />
-          </li>
+          </li >
           <li>
-            <img
+            <img  class="items"
               src="./images/box3.jpg"
               alt="Рисование на планшете"
               width="370"
@@ -86,17 +95,17 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section >
+        <h2 class="h2">Наша команда</h2>
+        <ul  class="list" >
+          <li >
             <img
               src="./images/img1.jpg"
               alt="фотография нашего сотрудника"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="comand">Игорь Демьяненко</h3>
+            <p class="p2">Product Designer</p>
           </li>
           <li>
             <img
@@ -104,8 +113,8 @@
               alt="фотография нашего сотрудника"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3  class="comand">Ольга Репина</h3>
+            <p class="p2">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -113,8 +122,8 @@
               alt="фотография нашего сотрудника"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3  class="comand">Николай Тарасов</h3>
+            <p class="p2">Marketing</p>
           </li>
           <li>
             <img
@@ -122,19 +131,19 @@
               alt="фотография нашего сотрудника"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="comand">Михаил Ермаков</h3>
+            <p class="p2">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Підвал-->
-    <footer>
-      <a href="/index.html"> WebStudio </a>
-      <address>
+    <footer class="foter">
+      <a class="logo" href="/index.html"> <span class="logo-s">Web</span> Studio </a>
+      <address class="addres">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p><a href="info@example.com">info@example.com</a></p>
-        <p><a href="+380991111111"> +380 991 11 1111 </a></p>
+        <p><a href= "+380991111111" > +380 991 11 1111 </a></p>
       </address>
     </footer>
   </body>
