--- a/portfolio.html
+++ b/portfolio.html
@@ -4,95 +4,104 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Document</title>
   </head>
 
   <body>
     <!--Шапка сайту-->
-    <header>
-      <nav>
-        <a href="/index.html"> WebStudio </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href=""> Портфолио</a></li>
-          <li><a href=""> Контакты</a></li>
+    <div class="wraper">
+      <header class="header">
+        <nav class="navigation">
+          <ul class=" list navigation-link">
+            <li class="logo"><a href=""> <span class="logo-s">Web</span>Studio </a></li>
+            <li class=" navigation-item"><a href="./index.html" class="base-header">Студия</a></li>
+            <li class=" navigation-item"><a href="./portfolio.html" class="base-header"> Портфолио</a></li>
+            <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="list navigation-link">
+          <li class=" navigation-item" class="base-headers"><a href="">info@devstudio.com</a></li>
+          <li class=" navigation-item" class="base-headers"><a href="">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
+      </header>
+    </div>
     <main>
       <section>
-        <h1>Фильтр</h1>
-        <ul>
-          <li>Все</li>
-          <li>Веб-сайты</li>
-          <li>Приложения</li>
-          <li>Дизайн</li>
-          <li>Маркетинг</li>
+        <h1 class="visually-hidden">Фильтр</h1>
+        <ul class="list">
+          <li><button class="list-btn">Все</button></li>
+          <li ><button class="list-btn">Веб-сайты</button></li>
+          <li ><button class="list-btn">Приложения</button></li>
+          <li ><button class="list-btn">Дизайн</button></li>
+          <li ><button class="list-btn">Маркетинг</button></li>
         </ul>
       </section>
       <section>
-        <h2>Проекти</h2>
-        <ul>
+        <h2 class="visually-hidden">Проекти</h2>
+        <ul class="list">
           <li>
             <img src="./images/project9.jpg" alt="Фото проекту" width="370" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="projekts-h3" >Технокряк</h3>
+            <p class="projekts-p">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/project8.jpg" alt="Фото проекту" width="370" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="projekts-h3">Постер New Orlean vs Golden Star</h3>
+            <p class="projekts-p">Дизайн</p>
           </li>
           <li>
             <img src="./images/project7.jpg" alt="Фото проекту " width="370" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="projekts-h3">Ресторан Seafood</h3>
+            <p class="projekts-p">Приложение</p>
           </li>
           <li>
             <img src="./images/project6.jpg" alt="Фото проекту " width="370" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="projekts-h3">Проект Prime</h3>
+            <p class="projekts-p">Маркетинг</p>
           </li>
           <li>
             <img src="./images/project5.jpg" alt=" Фото проекту" width="370" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="projekts-h3">Проект Boxes</h3>
+            <p class="projekts-p">Приложение</p>
           </li>
           <li>
             <img src="./images/project4.jpg" alt="Фото проекту " width="370" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="projekts-h3">Inspiration has no Borders</h3>
+            <p class="projekts-p">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/project3.jpg" alt=" Фото проекту" width="370" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="projekts-h3">Издание Limited Edition</h3>
+            <p class="projekts-p">Дизайн</p>
           </li>
           <li>
             <img src="./images/project2.jpg" alt="Фото проекту " width="370" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="projekts-h3">Проект LAB</h3>
+            <p class="projekts-p">Маркетинг</p>
           </li>
           <li>
             <img src="./images/project1.jpg" alt="Фото проекту " width="370" />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="projekts-h3">Growing Business</h3>
+            <p  class="projekts-p">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Підвал-->
-    <footer>
-      <a href="/index.html"> WebStudio </a>
-      <address>
+    <footer class="foter">
+      <a class="logo" href="/index.html"> <span class="logo-s">Web</span> Studio </a>
+      <address class="addres">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p><a href="info@example.com">info@example.com</a></p>
         <p><a href="+380991111111"> +380 991 11 1111 </a></p>
       </address>
     </footer>
-  </body>
-</html>
+    </body>
+    </html>
+
