--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Document</title>
   </head>
 
@@ -18,16 +20,28 @@
     <div class="wraper">
       <header class="header">
         <nav class="navigation">
-          <ul class=" list navigation-link">
-            <li class="logo"><a href=""> <span class="logo-s">Web</span>Studio </a></li>
-            <li class=" navigation-item"><a href="./index.html" class="base-header">Студия</a></li>
-            <li class=" navigation-item"><a href="./portfolio.html" class="base-header"> Портфолио</a></li>
-            <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
+          <ul class="list navigation-link">
+            <li class="logo">
+              <a href=""> <span class="logo-s">Web</span>Studio </a>
+            </li>
+            <li class="navigation-item">
+              <a href="./index.html"   class="base-header">Студия</a>
+            </li>
+            <li class="navigation-item">
+              <a href="./portfolio.html"  class="base-header"> Портфолио</a>
+            </li>
+            <li class="navigation-item">
+              <a href="" class="base-header">Контакты</a>
+            </li>
           </ul>
         </nav>
         <ul class="list navigation-link">
-          <li class=" navigation-item" class="base-headers"><a href="">info@devstudio.com</a></li>
-          <li class=" navigation-item" class="base-headers"><a href="">+38 096 111 11 11</a></li>
+          <li class="navigation-item" >
+            <a href="">info@devstudio.com</a>
+          </li>
+          <li class="navigation-item" >
+            <a href="">+38 096 111 11 11</a>
+          </li>
         </ul>
       </header>
     </div>
@@ -36,10 +50,10 @@
         <h1 class="visually-hidden">Фильтр</h1>
         <ul class="list">
           <li><button class="list-btn">Все</button></li>
-          <li ><button class="list-btn">Веб-сайты</button></li>
-          <li ><button class="list-btn">Приложения</button></li>
-          <li ><button class="list-btn">Дизайн</button></li>
-          <li ><button class="list-btn">Маркетинг</button></li>
+          <li><button class="list-btn">Веб-сайты</button></li>
+          <li><button class="list-btn">Приложения</button></li>
+          <li><button class="list-btn">Дизайн</button></li>
+          <li><button class="list-btn">Маркетинг</button></li>
         </ul>
       </section>
       <section>
@@ -47,7 +61,7 @@
         <ul class="list">
           <li>
             <img src="./images/project9.jpg" alt="Фото проекту" width="370" />
-            <h3 class="projekts-h3" >Технокряк</h3>
+            <h3 class="projekts-h3">Технокряк</h3>
             <p class="projekts-p">Веб-сайт</p>
           </li>
           <li>
@@ -88,20 +102,21 @@
           <li>
             <img src="./images/project1.jpg" alt="Фото проекту " width="370" />
             <h3 class="projekts-h3">Growing Business</h3>
-            <p  class="projekts-p">Приложение</p>
+            <p class="projekts-p">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Підвал-->
     <footer class="foter">
-      <a class="logo" href="/index.html"> <span class="logo-s">Web</span> Studio </a>
+      <a class="logo" href="/index.html">
+        <span class="logo-s">Web</span> Studio
+      </a>
       <address class="addres">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p><a href="info@example.com">info@example.com</a></p>
         <p><a href="+380991111111"> +380 991 11 1111 </a></p>
       </address>
     </footer>
-    </body>
-    </html>
-
+  </body>
+</html>
