--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <header class="header">
       <nav class="navigation">
         <ul class=" list navigation-link">
-          <li class="logo"><a href=""> <span class="logo-s">Web</span>Studio </a></li>
+          <li class="logo"><a href=""><span class="logo-s">Web</span><span class="logo-studio">Studio</span></a></li>
           <li class=" navigation-item"><a href="./index.html" class="base-header">Студия</a></li>
           <li class=" navigation-item"><a href="./portfolio.html" class="base-header"> Портфолио</a></li>
           <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list navigation-link">
-        <li class=" navigation-item" ><a href="">info@devstudio.com</a></li>
-        <li class=" navigation-item" ><a href="">+38 096 111 11 11</a></li>
+        <li><a href="info@devstudio.com" class=" navigation-item">info@devstudio.com</a></li>
+        <li><a href="+380961111111" class=" navigation-item">+38 096 111 11 11</a></li>
       </ul>
     </header>
   </div>
@@ -37,33 +37,33 @@
       <h1 class="hero-h">Эффективные решения для вашего бизнеса </h1>
       <button class="hero-btn">Заказать услугу</button>
     </section>
-    <section class="section-1">
+    <section class="main-section">
       <h2 class="visually-hidden">Навички</h2>
       <ul class="list">
         <li>
-          <h3 class="h3">Внимание к деталям</h3>
-          <p class="p">
+          <h3 class="main-section-h">Внимание к деталям</h3>
+          <p class="main-section-p">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
         <li>
-          <h3 class="h3">Пунктуальность</h3>
-          <p class="p">
+          <h3 class="main-section-h">Пунктуальность</h3>
+          <p class="main-section-p">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
           </p>
         </li>
         <li>
-          <h3 class="h3">Планирование</h3>
-          <p class="p">
+          <h3 class="main-section-h">Планирование</h3>
+          <p class="main-section-p">
             Равным образом консультация с широким активом в значительной
             степени обуславливает.
           </p>
         </li>
         <li>
-          <h3 class="h3">Современные технологии</h3>
-          <p class="p">
+          <h3 class="main-section-h">Современные технологии</h3>
+          <p class="main-section-p">
             Значимость этих проблем настолько очевидна, что реализация
             плановых заданий.
           </p>
@@ -72,7 +72,7 @@
     </section>
     <section>
 
-      <h2 class="h2">Чем мы занимаемся</h2>
+      <h2 class="section-job-h">Чем мы занимаемся</h2>
       <ul class="list">
         <li>
           <img class="items" src="./images/box1.jpg" alt="Кодирование на компьютере и на планшете " width="370" />
@@ -86,38 +86,38 @@
       </ul>
     </section>
     <section>
-      <h2 class="h2">Наша команда</h2>
+      <h2 class="section-job-h">Наша команда</h2>
       <ul class="list">
         <li>
           <img src="./images/img1.jpg" alt="фотография нашего сотрудника" width="270" />
           <h3 class="comand">Игорь Демьяненко</h3>
-          <p class="p2">Product Designer</p>
+          <p class="section-job-p">Product Designer</p>
         </li>
         <li>
           <img src="./images/img2.jpg" alt="фотография нашего сотрудника" width="270" />
           <h3 class="comand">Ольга Репина</h3>
-          <p class="p2">Frontend Developer</p>
+          <p class="section-job-p">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/img3.jpg" alt="фотография нашего сотрудника" width="270" />
           <h3 class="comand">Николай Тарасов</h3>
-          <p class="p2">Marketing</p>
+          <p class="section-job-p">Marketing</p>
         </li>
         <li>
           <img src="./images/img4.jpg" alt="фотография нашего сотрудника" width="270" />
           <h3 class="comand">Михаил Ермаков</h3>
-          <p class="p2">UI Designer</p>
+          <p class="section-job-p">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
   <!--Підвал-->
   <footer class="foter">
-    <a class="logo" href="/index.html"> <span class="logo-s">Web</span> Studio </a>
+    <a class="logo" href="/index.html"> <span class="logo-s">Web</span>Studio</a>
     <address class="addres">
       <p>г. Киев, пр-т Леси Украинки, 26</p>
-      <p><a href="info@example.com">info@example.com</a></p>
-      <p><a href="+380991111111"> +380 991 11 1111 </a></p>
+      <p><a href="info@example.com" class="addres-color" >info@example.com</a></p>
+      <p><a href="+380991111111" class="addres-color" >+380 991 11 1111</a></p>
     </address>
   </footer>
 </body>
