--- a/portfolio.html
+++ b/portfolio.html
@@ -17,32 +17,20 @@
 
   <body>
     <!--Шапка сайту-->
-    <div class="wraper">
-      <header class="header">
-        <nav class="navigation">
-          <ul class="list navigation-link">
-            <li class="logo">
-              <a href=""> <span class="logo-s">Web</span>Studio </a>
-            </li>
-            <li class="navigation-item">
-              <a href="./index.html"   class="base-header">Студия</a>
-            </li>
-            <li class="navigation-item">
-              <a href="./portfolio.html"  class="base-header"> Портфолио</a>
-            </li>
-            <li class="navigation-item">
-              <a href="" class="base-header">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="list navigation-link">
-          <li class="navigation-item" >
-            <a href="">info@devstudio.com</a>
-          </li>
-          <li class="navigation-item" >
-            <a href="">+38 096 111 11 11</a>
-          </li>
+  <div class="wraper">
+    <header class="header">
+      <nav class="navigation">
+        <ul class=" list navigation-link">
+          <li class="logo"><a href=""><span class="logo-s">Web</span><span class="logo-studio">Studio</span></a></li>
+          <li class=" navigation-item"><a href="./index.html" class="base-header">Студия</a></li>
+          <li class=" navigation-item"><a href="./portfolio.html" class="base-header"> Портфолио</a></li>
+          <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
         </ul>
+      </nav>
+      <ul class="list navigation-link">
+        <li><a href="info@devstudio.com" class=" navigation-item">info@devstudio.com</a></li>
+        <li><a href="+380961111111" class=" navigation-item">+38 096 111 11 11</a></li>
+      </ul>
       </header>
     </div>
     <main>
@@ -60,63 +48,61 @@
         <h2 class="visually-hidden">Проекти</h2>
         <ul class="list">
           <li>
-            <img src="./images/project9.jpg" alt="Фото проекту" width="370" />
-            <h3 class="projekts-h3">Технокряк</h3>
-            <p class="projekts-p">Веб-сайт</p>
+            <img src="./images/project9.jpg"  alt="Фото проекту" width="370" />
+            <h3><a href="" class="projekts-h">Технокряк</a></h3>
+          <p><a href="" class="projekts-p">Веб-сайт</a></p>
           </li>
           <li>
             <img src="./images/project8.jpg" alt="Фото проекту" width="370" />
-            <h3 class="projekts-h3">Постер New Orlean vs Golden Star</h3>
-            <p class="projekts-p">Дизайн</p>
+            <h3 ><a href="" class="projekts-h">Постер New Orlean vs Golden Star</a></h3>
+            <p ><a href="" class="projekts-p">Дизайн</a></p>
           </li>
           <li>
             <img src="./images/project7.jpg" alt="Фото проекту " width="370" />
-            <h3 class="projekts-h3">Ресторан Seafood</h3>
-            <p class="projekts-p">Приложение</p>
+            <h3 ><a href="" class="projekts-h">Ресторан Seafood</a></h3>
+            <p ><a href="" class="projekts-p">Приложение</a></p>
           </li>
           <li>
             <img src="./images/project6.jpg" alt="Фото проекту " width="370" />
-            <h3 class="projekts-h3">Проект Prime</h3>
-            <p class="projekts-p">Маркетинг</p>
+            <h3 ><a href="" class="projekts-h">Проект Prime</a></h3>
+            <p ><a href="" class="projekts-p">Маркетинг</a></p>
           </li>
           <li>
             <img src="./images/project5.jpg" alt=" Фото проекту" width="370" />
-            <h3 class="projekts-h3">Проект Boxes</h3>
-            <p class="projekts-p">Приложение</p>
+            <h3 ><a href="" class="projekts-h">Проект Boxes</a></h3>
+            <p ><a href="" class="projekts-p">Приложение</a></p>
           </li>
           <li>
             <img src="./images/project4.jpg" alt="Фото проекту " width="370" />
-            <h3 class="projekts-h3">Inspiration has no Borders</h3>
-            <p class="projekts-p">Веб-сайт</p>
+            <h3 ><a href="" class="projekts-h">Inspiration has no Borders</a></h3>
+            <p ><a href="" class="projekts-p">Веб-сайт</a></p>
           </li>
           <li>
             <img src="./images/project3.jpg" alt=" Фото проекту" width="370" />
-            <h3 class="projekts-h3">Издание Limited Edition</h3>
-            <p class="projekts-p">Дизайн</p>
+            <h3 ><a href="" class="projekts-h">Издание Limited Edition</a></h3>
+            <p ><a href="" class="projekts-p">Дизайн</a></p>
           </li>
           <li>
             <img src="./images/project2.jpg" alt="Фото проекту " width="370" />
-            <h3 class="projekts-h3">Проект LAB</h3>
-            <p class="projekts-p">Маркетинг</p>
+            <h3 ><a href="" class="projekts-h">Проект LAB</a></h3>
+            <p ><a href="" class="projekts-p">Маркетинг</a></p>
           </li>
-          <li>
+          <li> 
             <img src="./images/project1.jpg" alt="Фото проекту " width="370" />
-            <h3 class="projekts-h3">Growing Business</h3>
-            <p class="projekts-p">Приложение</p>
+            <h3 ><a href="" class="projekts-h">Growing Business</a></h3>
+            <p ><a href="" class="projekts-p">Приложение</a></p>
           </li>
         </ul>
       </section>
     </main>
     <!--Підвал-->
     <footer class="foter">
-      <a class="logo" href="/index.html">
-        <span class="logo-s">Web</span> Studio
-      </a>
+      <a class="logo" href="/index.html"> <span class="logo-s">Web</span>Studio</a>
       <address class="addres">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p><a href="info@example.com">info@example.com</a></p>
-        <p><a href="+380991111111"> +380 991 11 1111 </a></p>
+        <p><a href="info@example.com" class="addres-color">info@example.com</a></p>
+        <p><a href="+380991111111" class="addres-color">+380 991 11 1111</a></p>
       </address>
     </footer>
-  </body>
-</html>
+    </body>
+    </html>
