--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
   <title>Document</title>
 </head>
 
@@ -19,16 +19,17 @@
   <div class="wraper">
     <header class="header">
       <nav class="navigation">
+        
         <ul class=" list navigation-link">
-          <li class="logo"><a href=""><span class="logo-s">Web</span><span class="logo-studio">Studio</span></a></li>
+          <li> <a href="./index.html " class="logo"><span class="logo-s">Web</span><span class="logo-studio">Studio</span></a></li>
           <li class=" navigation-item"><a href="./index.html" class="base-header">Студия</a></li>
           <li class=" navigation-item"><a href="./portfolio.html" class="base-header"> Портфолио</a></li>
           <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list navigation-link">
-        <li><a href="info@devstudio.com" class=" navigation-item">info@devstudio.com</a></li>
-        <li><a href="+380961111111" class=" navigation-item">+38 096 111 11 11</a></li>
+        <li><a href="mail_to:info@devstudio.com" class=" navigation-item">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class=" navigation-item">+38 096 111 11 11</a></li>
       </ul>
     </header>
   </div>
@@ -113,11 +114,11 @@
   </main>
   <!--Підвал-->
   <footer class="foter">
-    <a class="logo" href="/index.html"> <span class="logo-s">Web</span>Studio</a>
+    <a class="logo" href="/index.html"><span class="logo-s">Web</span>Studio</a>
     <address class="addres">
-      <p>г. Киев, пр-т Леси Украинки, 26</p>
-      <p><a href="info@example.com" class="addres-color" >info@example.com</a></p>
-      <p><a href="+380991111111" class="addres-color" >+380 991 11 1111</a></p>
+      <p>г. Киев, пр-т Леси Украинки,26</p>
+      <p><a href="mail_to:info@example.com" class="addres-color" >info@example.com</a></p>
+      <p><a href="tel:+380991111111" class="addres-color" >+380 991 11 1111</a></p>
     </address>
   </footer>
 </body>
