--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <li> <a href="./index.html " class="logo"><span class="logo-s">Web</span><span class="logo-studio">Studio</span></a>
         </li>
           <li class=" navigation-item"><a href="./index.html" class="base-header" >Студия</a></li>
-          <li class=" navigation-item"><a href="./portfolio.html" class="base-header" > Портфолио</a></li>
+          <li class=" navigation-item"><a href="./portfolio.html"  class="current" class="base-header" > Портфолио</a></li>
           <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
         </ul>
       </nav>
